# telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  git-rebase-todo  pyproject.toml
Data/docs/: blood_pressure.md  healthy_eating.md  kids_nutrition.md  physical_activity.md  physical_activity_abstract.md  stress_and_sleep.md  type2_diabetes_prevention.md
scripts/: eval_queries.py  eval_response.py
src/health_rag/: __init__.py  chunking.py  config.py  domain_gate.py  embeddings.py  logging_config.py  query_normalize.py  token_estimate.py
src/health_rag/cli/: ingest.py
src/health_rag/domain/: __init__.py  models.py
src/health_rag/index/: __init__.py  faiss_index.py
src/health_rag/llm/: __init__.py  ollama_client.py
src/health_rag/loaders/: __init__.py  base.py  markdown.py
src/health_rag/pipeline/: __init__.py  ingest_pipeline.py
src/health_rag/rag/: __init__.py  context_builder.py  prompt.py
src/health_rag/retrieval/: __init__.py  base.py  dense.py  factory.py  hybrid.py
src/health_rag/services/: __init__.py  rag_service.py
src/health_rag/storage/: __init__.py  schema.sql  store.py
src/health_rag/telegram_app/: __init__.py  bot.py  handlers.py
src/health_rag/ui/: __init__.py  gradio_app.py
tests/: test_context_builder.py  test_markdown_loader.py  test_query_normalize.py
